WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299368
Fix remaining smart pointer errors in webpushd
https://bugs.webkit.org/show_bug.cgi?id=299368
Summary
Fix remaining smart pointer errors in webpushd
Frédéric Wang (:fredw)
Reported
2025-09-23 06:28:28 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Frédéric Wang (:fredw)
Comment 1
2025-09-23 07:04:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51192
EWS
Comment 2
2025-09-26 03:33:54 PDT
Committed
300566@main
(0157ffa26fb1): <
https://commits.webkit.org/300566@main
> Reviewed commits have been landed. Closing PR #51192 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-09-26 03:34:18 PDT
<
rdar://problem/161397465
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug